--- a/src/dialog/generaloverview.ui
+++ b/src/dialog/generaloverview.ui
@@ -60,6 +60,11 @@
      </column>
      <column>
       <property name="text">
+       <string>Source</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Gender</string>
       </property>
      </column>
