add Navigator in overview and add some audios for kanade.

--- a/src/dialog/generaloverview.ui
+++ b/src/dialog/generaloverview.ui
@@ -65,6 +65,11 @@
      </column>
      <column>
       <property name="text">
+       <string>Navigator</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Gender</string>
       </property>
      </column>
